--- a/assets/css/leadmark.css
+++ b/assets/css/leadmark.css
@@ -11422,7 +11422,7 @@ textarea.form-control {
   position: relative;
   height: 100vh;
   min-height: 500px;
-  background: url(../imgs/header.jpg) no-repeat center center fixed;
+  background: url(../imgs/background.jpg) no-repeat center center fixed;
   background-size: cover;
   overflow: hidden;
 }
