--- a/assets/css/leadmark.css
+++ b/assets/css/leadmark.css
@@ -11422,7 +11422,7 @@ textarea.form-control {
   position: relative;
   height: 100vh;
   min-height: 500px;
-  background: url(../imgs/background.jpg) no-repeat center center fixed;
+  background: url(https://user-images.githubusercontent.com/59316805/192132940-09e41ebc-d628-4166-8381-31079442ffa2.jpg) no-repeat center center fixed;
   background-size: cover;
   overflow: hidden;
 }
