--- a/assets/css/leadmark.css
+++ b/assets/css/leadmark.css
@@ -11422,7 +11422,7 @@ textarea.form-control {
   position: relative;
   height: 100vh;
   min-height: 500px;
-  background: url(https://user-images.githubusercontent.com/59316805/192133236-56960ddf-2e3a-4f2e-84b6-57c9b6fb119b.jpg) no-repeat center center fixed;
+  background: url(https://user-images.githubusercontent.com/59316805/192133631-ff80259f-66c7-4cf7-87d5-a9bbc5d6baee.png) no-repeat center center fixed;
   background-size: cover;
   overflow: hidden;
 }
