--- a/assets/css/leadmark.css
+++ b/assets/css/leadmark.css
@@ -11422,7 +11422,7 @@ textarea.form-control {
   position: relative;
   height: 100vh;
   min-height: 500px;
-  background: url(https://user-images.githubusercontent.com/59316805/236625224-f0cd4328-7791-4aa9-a195-451764e373a6.png) no-repeat center center fixed;
+  background: url(/assets/imgs/bg.png) no-repeat center center fixed;
   background-size: cover;
   overflow: hidden;
 }
